# mlops_exercise

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.dvc  data.py  main.py  model.pt  pyproject.toml  requirements.txt  trainer.dockerfile
.dvc/: config
.github/workflows/: cml_data.yaml  codecheck.yaml  stage_model.yaml  tests.yaml
assets/: MLOps.png:Zone.Identifier
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
logging_exercise/: my_logger.py
mlops_ex_2/: __init__.py  train_model.py
mlops_ex_2/config/experiment/: exp1.yaml  exp2.yaml
mlops_ex_2/config/model_conf/: arc1.yaml  arc2.yaml
mlops_ex_2/data/: make_dataset.py
mlops_ex_2/models/: model.py
models/: model.pt
src/: __init__.py  predict_model.py  train_model.py
src/config/: default_config.yaml
src/config/experiment/: exp1.yaml  exp2.yaml
src/config/model_conf/: arc1.yaml  arc2.yaml
src/data/: dataset_statistics.py  make_dataset.py
src/models/: model.py
tests/: test_data.py  test_model.py  test_model_performance.py
